# RAG-Pipeline-Optimizer

./: .env  main.py  pyproject.toml
src/: config.py  exceptions.py
src/services/indexing/: text_chunker.py
src/services/pdf_parser/: docling.py  parser.py
