[project]
name = "rag-pipeline-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.73.0
    "fastapi>=0.128.8",
    "langchain>=1.2.10",
    "langchain-text-splitters>=1.1.1",
    "pypdfium2>=5.4.0",
]
